feat: add image for variant
